--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -15,6 +15,7 @@
   </properties>
 
   <dependencies>
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -22,4 +23,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+  <!-- UPDATE TO LATEST VERSION OF JAva -->
+  <plugins>
+  <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+        </configuration>
+  
+  </plugin>
+  </plugins>
+  </build>
 </project>
